# capstone-pawsitiveimpact

./: .gitignore
docs/milestone-1/: brainstorm.md  teamContractTemplate.md
reterminal/subsystemAlaa/controller/: README.md  aht20.py  app.py  fan.py  led.py  model.py  pyproject.toml
reterminal/subsystemAlaa/dashboard/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
reterminal/subsystemAlaa/dashboard/src/: App.tsx  styles.css
reterminal/subsystemAntonina/controller/: README.md  aht20.py  app.py  fan.py  led.py  model.py  pyproject.toml
reterminal/subsystemAntonina/dashboard/: .env.example  README.md  index.html  package.json  vite.config.ts
reterminal/subsystemAntonina/dashboard/src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
reterminal/subsystemLabiba/controller/: aht20.py  app.py  fan.py  led.py  model.py  pyproject.toml
reterminal/subsystemLabiba/dashboard/: package.json
reterminal/subsystemLabiba/dashboard/src/components/: ActuatorToggle.tsx  SensorGraph.tsx
reterminal/subsystemLabiba/dashboard/src/mainview/: App.tsx
