[project]
name = "controller"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "gpiozero>=2.0.1",
    "lgpio>=0.2.2.0",
    "seeed-grove-py",
    "smbus2>=0.4.3",
]

[tool.uv.sources]
seeed-grove-py = { git = "https://github.com/Seeed-Studio/grove.py" }
